xidlc/tests/snapshots/codegen_snapshot__openapi__http_stream_sse.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_stream_sse.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "xidl",
    "version": "0.1.0"
  },
  "openapi": "3.2.0",
  "paths": {
    "/HttpStreamSseService/watch_attribute_online": {
      "get": {
        "operationId": "HttpStreamSseService.watch_attribute_online",
        "responses": {
          "200": {
            "content": {
              "text/event-stream": {
                "itemSchema": {
                  "type": "boolean"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpStreamSseService"
        ]
      }
    },
    "/attribute/online": {
      "get": {
        "operationId": "HttpStreamSseService.get_attribute_online",
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "boolean"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpStreamSseService"
        ]
      },
      "post": {
        "operationId": "HttpStreamSseService.set_attribute_online",
        "requestBody": {
          "content": {
            "text/plain": {
              "schema": {
                "type": "boolean"
              }
            }
          }
        },
        "responses": {
          "204": {
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpStreamSseService"
        ]
      }
    },
    "/events/{topic}": {
      "get": {
        "operationId": "HttpStreamSseService.watch_topic",
        "parameters": [
          {
            "in": "path",
            "name": "topic",
            "required": true,
            "schema": {
              "type": "string"
            }
          },
          {
            "in": "query",
            "name": "lang",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "text/event-stream": {
                "itemSchema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpStreamSseService"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "HttpStreamSseService"
    }
  ]
}
