xidlc/tests/snapshots/codegen_snapshot__openapi__http_stream_sse_bindings.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_stream_sse_bindings.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "ProjectEvent": {
        "properties": {
          "id": {
            "type": "string"
          },
          "payload": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "payload"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "xidlc",
    "version": "v1.0.0"
  },
  "openapi": "3.2.0",
  "paths": {
    "/projects/{project_id}/events": {
      "get": {
        "operationId": "HttpStreamSseBindingsService.watch_project",
        "parameters": [
          {
            "in": "path",
            "name": "project_id",
            "required": true,
            "schema": {
              "type": "string"
            }
          },
          {
            "in": "query",
            "name": "cursor",
            "required": false,
            "schema": {
              "type": "string"
            }
          },
          {
            "in": "header",
            "name": "X-Trace-Id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "text/event-stream": {
                "itemSchema": {
                  "$ref": "#/components/schemas/ProjectEvent"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpStreamSseBindingsService"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "HttpStreamSseBindingsService"
    }
  ]
}
