xidlc/tests/snapshots/codegen_snapshot__openapi__http_union.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_union.json
===============
{
  "components": {
    "schemas": {
      "ContentType": {
        "enum": [
          "application/json",
          "application/octet-stream"
        ],
        "type": "string"
      },
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "FileMeta": {
        "properties": {
          "etag": {
            "type": "string"
          },
          "id": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "etag"
        ],
        "type": "object"
      },
      "FileResponse": {
        "oneOf": [
          {
            "properties": {
              "meta": {
                "$ref": "#/components/schemas/FileMeta"
              }
            },
            "required": [
              "meta"
            ],
            "type": "object"
          },
          {
            "properties": {
              "raw": {
                "items": {
                  "format": "int32",
                  "minimum": 0,
                  "type": "integer"
                },
                "type": "array"
              }
            },
            "required": [
              "raw"
            ],
            "type": "object"
          }
        ]
      },
      "NotFound": {
        "properties": {
          "code": {
            "format": "int32",
            "minimum": 0,
            "type": "integer"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "Demo API",
    "version": "v1"
  },
  "openapi": "3.1.0",
  "paths": {
    "/file": {
      "get": {
        "operationId": "Files.get_file",
        "parameters": [
          {
            "in": "query",
            "name": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/FileMeta"
                }
              },
              "application/octet-stream": {
                "schema": {
                  "format": "binary",
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/NotFound"
                }
              }
            },
            "description": "Error: NotFound"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "Files"
        ]
      }
    },
    "/meta": {
      "get": {
        "operationId": "Files.get_meta",
        "parameters": [
          {
            "in": "query",
            "name": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/FileMeta"
                }
              },
              "application/octet-stream": {
                "schema": {
                  "format": "binary",
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/NotFound"
                }
              }
            },
            "description": "Error: NotFound"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "Files"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "Files"
    }
  ]
}
