xidlc/tests/snapshots/codegen_snapshot__openapi__ipc.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_ipc.json
===============
{
  "components": {
    "schemas": {
      "Artifact": {
        "oneOf": [
          {
            "properties": {
              "hir": {
                "$ref": "#/components/schemas/ArtifactHir"
              }
            },
            "required": [
              "hir"
            ],
            "type": "object"
          },
          {
            "properties": {
              "file": {
                "$ref": "#/components/schemas/ArtifactFile"
              }
            },
            "required": [
              "file"
            ],
            "type": "object"
          }
        ]
      },
      "ArtifactFile": {
        "properties": {
          "content": {
            "type": "string"
          },
          "path": {
            "type": "string"
          }
        },
        "required": [
          "path",
          "content"
        ],
        "type": "object"
      },
      "ArtifactHir": {
        "properties": {
          "hir": {
            "$ref": "#/components/schemas/xidl_parser.hir.Specification"
          },
          "lang": {
            "type": "string"
          },
          "props": {
            "$ref": "#/components/schemas/xidl_parser.hir.ParserProperties"
          }
        },
        "required": [
          "lang",
          "hir",
          "props"
        ],
        "type": "object"
      },
      "ArtifactKind": {
        "enum": [
          "Hir",
          "File"
        ],
        "type": "string"
      },
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "xidl",
    "version": "0.1.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/generate": {
      "post": {
        "operationId": "Codegen.generate",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "hir": {
                    "$ref": "#/components/schemas/xidl_parser.hir.Specification"
                  },
                  "path": {
                    "type": "string"
                  },
                  "props": {
                    "$ref": "#/components/schemas/xidl_parser.hir.ParserProperties"
                  }
                },
                "required": [
                  "hir",
                  "path",
                  "props"
                ],
                "type": "object"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "$ref": "#/components/schemas/Artifact"
                  },
                  "type": "array"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "Codegen"
        ]
      }
    },
    "/get_engine_version": {
      "post": {
        "operationId": "Codegen.get_engine_version",
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "Codegen"
        ]
      }
    },
    "/get_properties": {
      "post": {
        "operationId": "Codegen.get_properties",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/xidl_parser.hir.ParserProperties"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "Codegen"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "Codegen"
    }
  ]
}
