xidlc/tests/snapshots/codegen_snapshot__openapi__struct_skip.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_struct_skip.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "SkipStruct": {
        "properties": {
          "a": {
            "format": "int32",
            "type": "integer"
          },
          "c": {
            "format": "int32",
            "type": "integer"
          }
        },
        "required": [
          "a",
          "c"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "xidl",
    "version": "0.1.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/op": {
      "post": {
        "operationId": "TestSkip.op",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/SkipStruct"
              }
            }
          }
        },
        "responses": {
          "204": {
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "TestSkip"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "TestSkip"
    }
  ]
}
